Adding genetics to the brown-white rabbits

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "populations-models",
   "dependencies": {
    "pixi.js": "v2.2.9",
-   "populations.js": "0.0.8"
+   "populations.js": "0.0.17-genetics"
   },
   "overrides": {
     "populations.js": {
